update config cors gateway